Fixed overlapping on mobile view (add-task.component)

--- a/src/app/main-content/add-task/add-task.component.scss
+++ b/src/app/main-content/add-task/add-task.component.scss
@@ -128,7 +128,7 @@
         width: 100%;
         padding-right: 70px;
         position: relative;
-        z-index: 21;
+        z-index: 1;
       }
 
       .input-icons {
@@ -233,7 +233,7 @@
   position: fixed;
   padding: 6px 10px;
   border-radius: 6px;
-  z-index: 1000;
+  z-index: 20;
 }
 
 .subtask-icons {
@@ -282,7 +282,7 @@
 // Container Queries
   @container task-section (max-width: 1200px) {
     .task-section-content {
-      height: calc(100vh - 96px - 80px);
+      height: calc(100vh - 96px - 80px) !important;
       overflow-y: auto;
       padding: 20px 20px !important;
     }
